# rust-api_dev

./: Cargo.toml  notes.md  readme.md
examples/: quick_dev.rs
public/: test.txt
src/: error.rs  main.rs  model.rs
src/web/: mod.rs  mw_auth.rs  routes_login.rs  routes_tickets.rs
