[package]
name = "api-dev"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1", features = ["full"]}
# Serde / json
serde = {version = "1", features = ["derive"]}
serde_json = "1"
#Axum
axum = "0.8"
tower-http = {version = "0.6", features = ["fs"]}
tower-cookies= "0.11"


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"

